# soroban-passkey

./: .env.example  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  pnpm-lock.yaml  restore-bump.sh  tailwind.config.js  vite.config.ts
android/: capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/java/org/sorobanbyexample/passkey/: MainActivity.java
android/app/src/main/res/values/: strings.xml
assets/: icon.sketch
contracts/: .gitignore  Makefile  README.md
contracts/contract-chicken-v-egg/src/: lib.rs
contracts/contract-webauthn-factory/src/: lib.rs
contracts/contract-webauthn-secp256r1/: Cargo.toml
contracts/contract-webauthn-secp256r1/src/: lib.rs
ext/capacitor-native-webauthn/: .gitignore  DarkedgesCapacitorNativeWebauthn.podspec  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js
ext/capacitor-native-webauthn/android/: build.gradle
ext/capacitor-native-webauthn/android/src/androidTest/java/com/darkedges/capacitor/webauthn/: WebAuthnInstrumentedTest.java
ext/capacitor-native-webauthn/android/src/main/java/com/darkedges/capacitor/webauthn/: WebAuthn.java  WebAuthnPlugin.java  WebAuthnTypes.java
ext/capacitor-native-webauthn/android/src/test/java/com/darkedges/capacitor/webauthn/: WebAuthnUnitTest.java
ext/capacitor-native-webauthn/ios/: Podfile
ext/capacitor-native-webauthn/ios/Plugin/: WebAuthn.swift  WebAuthnPlugin.m  WebAuthnPlugin.swift  WebAuthnTypes.swift
ext/capacitor-native-webauthn/ios/Plugin.xcodeproj/: project.pbxproj
ext/capacitor-native-webauthn/ios/PluginTests/: WebAuthnTests.swift
ext/capacitor-native-webauthn/src/: definitions.ts  index.ts  web.ts
ios/App/: Podfile
ios/App/App/: App.entitlements  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/Base.lproj/: LaunchScreen.storyboard
soroban/: Makefile.example  README.md
soroban/contract-chicken-v-egg/: Cargo.toml
soroban/contract-chicken-v-egg/src/: lib.rs
soroban/contract-webauthn-factory/: Cargo.toml
soroban/contract-webauthn-factory/src/: lib.rs
soroban/contract-webauthn-secp256r1/: Cargo.toml
soroban/contract-webauthn-secp256r1/src/: base64_url.rs  lib.rs  secp256r1.rs
src/: app.css  app.html
src/lib/: deploy.ts  fund.ts  get_balance.ts  get_votes.ts  refund_build.ts  refund_send.ts  vote_build.ts  vote_send.ts  webauthn.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  _page.svelte
