[package]
name = "webauthn-account-secp256r1"
version = "0.1.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.72"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = {version = "20.3.2"}
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = { version = "0.5.1", default-features = false }

[dev-dependencies]
soroban-sdk = {version = "20.3.2", features = ["testutils"]}
stellar-xdr = {version = "20.1.0", default-features = false, features = ["std", "curr"]}
sha256 = "1.4.0"

[patch.crates-io.soroban-sdk]
version = "20.3.2"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "26a35674edcdc5cb041d0c2c1ecf409eeb6b0d40"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
